--- a/Prototipo2p/nbproject/project.properties
+++ b/Prototipo2p/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Prototipo2p
+application.vendor=jorgi
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,8 +27,9 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Prototipo2p.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.46.jar=lib\\mysql-connector-java-5.1.46.jar
+file.reference.mysql-connector-java-5.1.46.jar=lib/mysql-connector-java-5.1.46.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -56,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ContenedorPrincipal
+main.class=login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
